[package]
name = "librsb-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.53"
bindgen = { version = "0.59.2", optional = true }
cc = "1.0.73"
once_cell = "1.9.0"

[dependencies]
bindgen = "0.59.2"

[features]
codegen = ["bindgen"]
doc-only = []
