[package]
name = "librsb-sys"
version = "0.1.1"
edition = "2021"
description = "FFI interface for librsb"
authors = ["Jerry Lin <jerry73204@gmail.com>"]
categories = ["algorithms", "mathematics"]
documentation = "https://docs.rs/librsb-sys/"
repository = "https://github.com/jerry73204/rsb-rust.git"
homepage = "https://github.com/jerry73204/rsb-rust"
build = "build.rs"
readme = "README.md"
license = "LGPL-3.0"

[build-dependencies]
anyhow = "1.0.53"
bindgen = { version = "0.59.2", optional = true }
cc = "1.0.73"
once_cell = "1.9.0"

[features]
codegen = ["bindgen"]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
