[package]
name = "librsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librsb-sys = { version = "0.1.0", path = "../librsb-sys" }

[features]
codegen = ["librsb-sys/codegen"]
doc-only = ["librsb-sys/doc-only"]
