[package]
name = "rsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
itertools = "0.10.3"
librsb-sys = { version = "0.1.0", path = "../librsb-sys" }
once_cell = "1.9.0"
slice-of-array = "0.3.1"
unzip-n = "0.1.2"

[target.'cfg(target_family = "windows")'.dependencies]
ascii = "1.0.0"

[features]
codegen = ["librsb-sys/codegen"]
doc-only = ["librsb-sys/doc-only"]
